# otus-cpp-basics

./: README.md  homework_02  Стенд_ТЗ.odt
homework_02/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world  readme
homework_2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  example.cpp
homework_3/: CMakeLists.txt  check_value.cpp  check_value.h  guess_number.cpp  guess_the_number.cpp  high_scores.cpp  high_scores.h  main.cpp  random_value.cpp  random_value.h
homework_4/: CMakeLists.txt
homework_4/include/: astnode.hpp  lexer.hpp  parser.hpp
homework_4/src/: main.cpp  parser.cpp
homework_5/: CMakeLists.txt  statistics.cpp
homework_6/: CMakeLists.txt  main.cpp
homework_7/: CMakeLists.txt
homework_7/TEST/: CMakeLists.txt  list_container.h  seq_container.h  test_list.cpp  test_seq.cpp
homework_7/googletest/: CMakeLists.txt  tests.cpp
homework_8/: CMakeLists.txt  main.cpp
