cmake_minimum_required(VERSION 3.5)

project(03.homework)

add_executable(
	check_value
	check_value.h
	check_value.cpp
)

add_executable(
	random_value
	random_value.h
	random_value.cpp
)

add_executable(
	high_scores
	high_scores.h
	high_scores.cpp
)

add_executable(
	guess_number
	guess_number
	guess_number.cpp
)